<resources>
    <string name="app_name">Wfood</string>
    <string name="tituloRestaurante"> WFood </string>
    <!-- String nao fixa no codigo para titulo da aplicação -->

    <string name="cozinha">Pedidos Para Cozinha</string>  <!-- String fixa para o botao que abriar a nova activity-->
    <string name="hint">Escreva seu pedido aqui</string>  <!-- String para hint de um edit text -->
    <string name="enviar">Enviar para WhatsApp</string> <!-- String para o botao de enviar pedidos por whatsapp-->
    <string name="titulo">COZINHA</string>  <!-- String para titulo da nova activity-->
    <string name="horas">Horas Trabalhadas</string>
    <string name="iniciar">INICIAR EXPEDIENTE</string>
    <string name="parar">PAUSAR</string>
    <string name="zerar">ENCERRAR EXPEDIENTE</string>
    <string name="titulohora">Horas trabalhadas</string>
    <string name="estoque">Estoque</string>
    <string name="novoproduto">Novo Produto</string>
    <string name="atualizarproduto">Atualizar Produto</string>
    <string name="emailfornecedor">E-mail para fornecedores</string>
    <string name="nome_produto">Para: </string>
    <string name="cod_produto">Código: </string>
    <string name="quantidade_produto">Quantidade: </string>
    <string name="salvar_produto">Salvar novo produto</string>
    <string name="atualizar_produto">Atualizar Produto</string>
    <string name="enviar_email">Enviar E-mail</string>
    <string name="nome_do_produto_em_falta">Endereço de email</string>
    <string name="cardapio">Cardápio</string>
    <string-array name="opcoes">
        <item>X-Burguer</item>
        <item>X-Salada</item>
        <item>X-Bacon</item>
        <itemm>Porção Fritas Cheddar Bacon</itemm>
        <item>Proçao Calabresa</item>

    </string-array>


</resources>