<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC300"
    tools:context=".Estoque_Activity">

    <include
        android:id="@+id/include5"
        layout="@layout/logo_wfood"
        android:layout_width="258dp"
        android:layout_height="214dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/estoque"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5" />


    <Button
        android:id="@+id/btnNovo"
        android:layout_width="147dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:background="#313131"
        android:onClick="onNovoProduto"
        android:text="@string/novoproduto"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="147dp"
        android:layout_height="47dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="28dp"
        android:background="#313131"
        android:onClick="onAtualizarProduto"
        android:text="@string/atualizarproduto"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnEnviarEmailParaFornecedor"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="#313131"
        android:onClick="onEnviarEmail"
        android:text="@string/emailfornecedor"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizar"
        app:layout_constraintVertical_bias="0.228" />

</androidx.constraintlayout.widget.ConstraintLayout>