<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="19px"
    android:orientation="vertical"
    tools:context=".NovoProduto_Activity"
    android:background="#FFC300">

    <!-- Codigo de layout para text e edittext para inserçao de dados
    utilizaei margin para dar espaços entre os componentes
    o botao ainda nao esta completo, acredite que iremos desenvolver em aula
    o botao salvar apenas informa uma mensagem ao usuario-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtIdProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cod_produto"
            android:layout_marginLeft="20px"
            android:layout_marginRight="52px"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/edtIdProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Código do produto"
            android:layout_marginRight="25px"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNomeProdutoNovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_produto"
            android:layout_marginLeft="20px"
            android:layout_marginRight="30px"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/edtNomeProdutoNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome do novo produto"
            android:layout_marginRight="25px"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_produto"
            android:layout_marginLeft="20px"
            android:layout_marginRight="30px"
            android:textSize="40px"/>

        <EditText
            android:id="@+id/edtQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informe a quantidade"
            android:layout_marginRight="25px"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEnviarEmailParaFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="#313131"
        android:textColor="#fff"
        android:onClick="onSalvarNovoProduto"
        android:text="@string/salvar_produto" />

    <TextView
        android:id="@+id/txtSalvarNovoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>