<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC300"
    tools:context=".CozinhaActivity">

    <include
        android:id="@+id/include4"
        layout="@layout/logo_wfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_titulo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <EditText
        android:id="@+id/edit_Mensagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/hint"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/text_titulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_titulo"
        app:layout_constraintTop_toBottomOf="@+id/text_titulo" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:background="#313131"
        android:onClick="onEnviarPedidoZAP"
        android:text="@string/enviar"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Mensagem" />

</androidx.constraintlayout.widget.ConstraintLayout>